--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.701.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "env": "0.0.2",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0"
   }
