feature for input field validation based on backend query

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,5 @@
     "titleBar.inactiveBackground": "#83256199",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
+  "peacock.color": "#61dafb"
 }
