--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
     "titleBar.inactiveBackground": "#83256199",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#61dafb"
+  "peacock.color": "#61dafb",
+  "cSpell.words": [
+    "lastname"
+  ]
 }
