--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "apps.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon -r dotenv/config app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.701.0",
+    "aws-sdk": "^2.702.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "env": "0.0.2",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
+    "per-env": "^1.0.2",
     "pug": "^3.0.0"
   }
 }
