--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "nodemon": "^2.0.4",
     "per-env": "^1.0.2",
     "pug": "^3.0.0",
-    "js-cookie": "^2.2.1",
-    "ssri": "^8.0.1"
+    "js-cookie": "^2.2.1"
   }
 }
